Sprint 1 / Week 1 completion

--- a/portfolio-project/frontend/package.json
+++ b/portfolio-project/frontend/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
+    "highlight.js": "^11.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.21.0"
+    ,"rehype-highlight": "^7.0.2"
+    ,"remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
