--- a/portfolio-project/backend/requirements.txt
+++ b/portfolio-project/backend/requirements.txt
@@ -54,6 +54,7 @@ loguru>=0.7.2,<1.0.0
 # Development
 pytest>=7.4.3,<9.0.0
 pytest-asyncio>=0.21.1,<1.0.0
+pytest-cov>=5.0.0,<7.0.0
 black>=23.12.0,<25.0.0
 isort>=5.13.2,<6.0.0
 flake8>=6.1.0,<8.0.0
