feat: update project documentation and structure
- Added historical context to various markdown files for clarity on project status and milestones.
- Enhanced .gitignore to include coverage reports and logs.
- Improved backend configuration to dynamically set environment file paths.
- Updated pytest configuration to generate coverage reports in XML format.
- Introduced quality gate script for streamlined testing and coverage checks.
- Refined start and status scripts for better environment validation and service management.
- Updated frontend dependencies to ensure compatibility and performance.

--- a/portfolio-project/.gitignore
+++ b/portfolio-project/.gitignore
@@ -1,5 +1,6 @@
-# Local container database volume
-docker-data/postgres/
-
-# Local analysis cache
 .scannerwork/
+logs/
+frontend/coverage/
+.coverage
+backend/coverage.xml
+docker-data/postgres/
