--- a/portfolio-project/sonar-project.properties
+++ b/portfolio-project/sonar-project.properties
@@ -1,11 +1,22 @@
-# Required project identification
-sonar.projectKey=portfolio-project
-sonar.projectName=Portfolio Project
+# Project identification
+sonar.projectKey=TurkishKEBAB_Site
+sonar.projectName=Site
 sonar.projectVersion=1.0
 
-# Sources
-sonar.sources=frontend,backend
-sonar.exclusions=**/node_modules/**,**/dist/**
+# Source layout
+sonar.sources=backend/app,frontend/src
+sonar.tests=backend/tests,frontend/src
+sonar.test.inclusions=backend/tests/**/*.py,frontend/src/**/*.test.ts,frontend/src/**/*.test.tsx
 
-# SonarQube server URL
-sonar.host.url=http://localhost:9000
+# Exclusions
+sonar.exclusions=**/node_modules/**,**/dist/**,**/venv/**,**/.scannerwork/**,**/coverage/**
+sonar.coverage.exclusions=frontend/src/**/*.test.ts,frontend/src/**/*.test.tsx,backend/tests/**/*.py
+
+# Coverage report imports
+sonar.python.coverage.reportPaths=backend/coverage.xml
+sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
+
+# Notes:
+# - Pass server and auth at runtime (local SonarQube or SonarCloud)
+#   Example local: sonar-scanner -Dsonar.host.url=http://localhost:9000 -Dsonar.token=%SONAR_TOKEN%
+#   Example cloud: sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=<org> -Dsonar.token=%SONAR_TOKEN%
