--- a/portfolio-project/backend/pytest.ini
+++ b/portfolio-project/backend/pytest.ini
@@ -2,4 +2,4 @@
 testpaths = tests
 python_files = test_*.py
 asyncio_mode = auto
-addopts = --cov=app.api.v1 --cov=app.crud --cov=app.api.deps --cov-report=term-missing --cov-fail-under=80
+addopts = --cov=app.api.v1 --cov=app.crud --cov=app.api.deps --cov-report=term-missing --cov-report=xml:coverage.xml --cov-fail-under=80
