--- a/portfolio-project/frontend/package.json
+++ b/portfolio-project/frontend/package.json
@@ -22,9 +22,9 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^6.21.0"
-    ,"rehype-highlight": "^7.0.2"
-    ,"remark-gfm": "^4.0.1"
+    "react-router-dom": "^6.21.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
@@ -39,12 +39,12 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.2.2",
+    "typescript": "5.3.3",
     "vite": "^5.0.8",
     "vitest": "^3.2.4",
     "jsdom": "^26.1.0",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/jest-dom": "^6.9.1"
-    ,"@vitest/coverage-v8": "^3.2.4"
+    "@testing-library/jest-dom": "^6.9.1",
+    "@vitest/coverage-v8": "^3.2.4"
   }
 }
